--- a/index.html
+++ b/index.html
@@ -1,337 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Alkanes – SPM Micro-Course</title>
-  <style>
-    :root{
-      --bg:#f0f4f8;
-      --card:#ffffffee;
-      --primary:#667eea;
-      --secondary:#764ba2;
-      --radius:16px;
-      --shadow:0 8px 32px rgba(31,38,135,.15);
-      --mono:'Fira Code',monospace;
-      --selected:#e0e0ff;
-    }
-    *{box-sizing:border-box;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif}
-    body{margin:0;background:linear-gradient(135deg,var(--primary),var(--secondary));min-height:100vh;color:#333;line-height:1.6;padding:2rem}
-    header{text-align:center;color:#fff;margin-bottom:2rem}
-    header h1{font-size:2.5rem;margin:.3rem 0}
-    nav{display:flex;flex-wrap:wrap;gap:.5rem;justify-content:center;margin-bottom:2rem}
-    nav a{color:#fff;text-decoration:none;background:rgba(255,255,255,.2);padding:.6rem 1rem;border-radius:var(--radius);backdrop-filter:blur(8px)}
-    nav a:hover{background:rgba(255,255,255,.3)}
-    .section{background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);backdrop-filter:blur(8px);padding:2rem;margin-bottom:2rem}
-    table{width:100%;border-collapse:collapse}
-    th,td{padding:.7rem;border-bottom:1px solid #e5e5e5;text-align:center}
-    th{background:#f7f9fc;font-weight:600}
-    img.tetra{display:block;margin:1rem auto;max-width:180px;border-radius:var(--radius)}
-    .flex{display:flex;gap:1rem;flex-wrap:wrap}
-    .flex>div{flex:1 1 250px}
-    canvas{border:1px solid #e5e5e5;border-radius:var(--radius);background:#fff}
-    button{background:linear-gradient(135deg,var(--primary),var(--secondary));color:#fff;border:none;padding:.7rem 1.2rem;border-radius:var(--radius);cursor:pointer;margin:.25rem}
-    button:disabled{opacity:.5}
-    .correct{background:#38b000}
-    .wrong{background:#e63946}
-    .selected{background:var(--selected);border:2px solid var(--primary)}
-    @media(max-width:600px){body{padding:1rem}header h1{font-size:2rem}}
-  </style>
+  <meta charset="UTF-8" />
+  <title>SPM Alkanes Learning Hub</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
-<h1>✨ Alkanes SPM Course</h1>
-<p>Beautiful & interactive revision</p>
+  <header>
+    <h1>SPM Alkanes Interactive Learning Hub</h1>
+    <p>Master Alkanes step by step!</p>
+  </header>
 
-<nav>
-  <a href="#objectives">🎯 Objectives</a>
-  <a href="#intro">📚 What are Alkanes?</a>
-  <a href="#formula">🧮 Formula</a>
-  <a href="#table">🔤 10 Alkanes</a>
-  <a href="#props">🧪 Properties & Uses</a>
-  <a href="#draw">🎨 Draw Butane</a>
-  <a href="#quiz">📝 20 MCQs</a>
-</nav>
+  <nav>
+    <ul>
+      <li><a href="#intro">Introduction</a></li>
+      <li><a href="#formula">General Formula</a></li>
+      <li><a href="#naming">Naming Alkanes</a></li>
+      <li><a href="#isomers">Isomerism</a></li>
+      <li><a href="#properties">Physical Properties</a></li>
+      <li><a href="#combustion">Combustion</a></li>
+      <li><a href="#uses">Uses</a></li>
+      <li><a href="#impact">Environmental Impact</a></li>
+      <li><a href="#quiz">Summary & Quiz</a></li>
+    </ul>
+  </nav>
 
-<!-- 🎯 OBJECTIVES -->
-<section id="objectives" class="section">
-  <h2>🎯 Objectives</h2>
-  <p>By the end of this lesson, you will be able to:</p>
-  <ul>
-    <li>Define what alkanes are and explain why they are called saturated hydrocarbons.</li>
-    <li>State and apply the general formula for alkanes.</li>
-    <li>Name the first ten alkanes correctly.</li>
-    <li>Write and draw the molecular and structural formulas for simple alkanes.</li>
-    <li>Describe the physical properties of alkanes.</li>
-    <li>Explain the chemical properties of alkanes.</li>
-    <li>Give examples of common uses of alkanes.</li>
-    <li>Test your understanding using practice MCQs with explanations.</li>
-  </ul>
-</section>
+  <main>
+    <section id="intro">
+      <h2>Introduction to Alkanes</h2>
+      <p>Alkanes are the simplest hydrocarbons. They are saturated because they contain only single bonds.</p>
+      <p>Example: Methane (CH₄), Ethane (C₂H₆), Propane (C₃H₈).</p>
+    </section>
 
-<!-- 1️⃣ INTRO -->
-<section id="intro" class="section">
-  <h2>📚 What Are Alkanes?</h2>
-  <ul>
-    <li><strong>Alkanes</strong> are <strong>saturated hydrocarbons</strong> – only single covalent bonds.</li>
-    <li>Each carbon forms four single bonds; chains can be straight or branched.</li>
-  </ul>
-  <img class="tetra" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Methane-CRC-MW-3D-balls.png/800px-Methane-CRC-MW-3D-balls.png" alt="Methane 3-D">
-</section>
+    <section id="formula">
+      <h2>General Formula</h2>
+      <p>The general formula for alkanes is <strong>CₙH₂ₙ₊₂</strong>.</p>
+      <p>Example: If n = 4 → C₄H₁₀ (Butane).</p>
+    </section>
 
-<!-- 2️⃣ GENERAL FORMULA -->
-<section id="formula" class="section">
-  <h2>🧮 General Formula</h2>
-  <p style="font-family:var(--mono);font-size:1.4rem">C<sub>n</sub>H<sub>2n+2</sub></p>
-  <p>Example: n = 3 → C₃H₈ (propane)</p>
-</section>
+    <section id="naming">
+      <h2>Naming Alkanes</h2>
+      <p>Use the root name + “-ane”. E.g., 1 carbon = methane, 2 = ethane, 3 = propane.</p>
+      <p>For branches: find the longest chain, number the carbon atoms, name the branches.</p>
+    </section>
 
-<!-- 3️⃣ FIRST 10 ALKANES -->
-<section id="table" class="section">
-  <h2>🔤 First 10 Alkanes</h2>
-  <table>
-    <thead><tr><th>C atoms</th><th>Name</th>Formula</th></tr></thead>
-    <tbody>
-      <tr><td>1</td><td>Methane</td><td>CH₄</td></tr>
-      <tr><td>2</td><td>Ethane</td><td>C₂H₆</td></tr>
-      <tr><td>3</td><td>Propane</td><td>C₃H₈</td></tr>
-      <tr><td>4</td><td>Butane</td><td>C₄H₁₀</td></tr>
-      <tr><td>5</td><td>Pentane</td><td>C₅H₁₂</td></tr>
-      <tr><td>6</td><td>Hexane</td><td>C₆H₁₄</td></tr>
-      <tr><td>7</td><td>Heptane</td><td>C₇H₁₆</td></tr>
-      <tr><td>8</td><td>Octane</td><td>C₈H₁₈</td></tr>
-      <tr><td>9</td><td>Nonane</td><td>C₉H₂₀</td></tr>
-      <tr><td>10</td><td>Decane</td><td>C₁₀H₂₂</td></tr>
-    </tbody>
-  </table>
-  <img src="https://mammothmemory.net/images/user/base/Chemistry/9.%20Hydrocarbons/2.9.3%20Examples%20of%20alkanes%20found%20in%20crude%20oil.jpg" alt="Alkanes in crude oil" style="max-width:100%;border-radius:var(--radius);margin-top:1rem;">
-</section>
+    <section id="isomers">
+      <h2>Isomerism</h2>
+      <p>Isomers have the same formula but different structures. Example: Butane → n-butane & isobutane.</p>
+    </section>
 
-<!-- 4️⃣ PROPERTIES & USES -->
-<section id="props" class="section">
-  <h2>🧪 Properties & Uses</h2>
-  <div class="flex">
-    <div>
-      <h3>Physical</h3>
-      <ul>
-        <li>Non-polar → insoluble in water</li>
-        <li>Boiling point ↑ with chain length</li>
-      </ul>
-    </div>
-    <div>
-      <h3>Chemical</h3>
-      <ul>
-        <li>Combustion → CO₂ + H₂O</li>
-        <li>Substitution with halogens under UV light</li>
-      </ul>
-    </div>
-    <div>
-      <h3>Uses</h3>
-      <ul>
-        <li>Methane: natural gas</li>
-        <li>Butane / propane: LPG</li>
-        <li>Octane: petrol</li>
-      </ul>
-    </div>
-  </div>
-</section>
+    <section id="properties">
+      <h2>Physical Properties</h2>
+      <p>Boiling point increases with more carbons. Alkanes are non-polar and don’t mix with water.</p>
+    </section>
 
-<!-- 5️⃣ LIVE SKETCHER -->
-<section id="draw" class="section">
-  <h2>🎨 Draw Butane Yourself</h2>
-  <p>Drag atoms • drag from one atom to another to create / cycle bonds.</p>
-  <p><strong>Hold <kbd>Shift</kbd></strong> while dragging to cycle: single → double → triple → none.</p>
-  <canvas id="canvas" width="520" height="300"></canvas>
-  <br>
-  <button onclick="addAtom('C')">Add C</button>
-  <button onclick="addAtom('H')">Add H</button>
-  <button onclick="eraseLast()">Erase Last</button>
-  <button onclick="resetCanvas()">Reset All</button>
-  <button onclick="checkButane()">Check Butane</button>
-  <p id="simMsg"></p>
-</section>
+    <section id="combustion">
+      <h2>Combustion</h2>
+      <p>Complete: Alkane + O₂ → CO₂ + H₂O.</p>
+      <p>Incomplete: Produces CO or soot.</p>
+    </section>
 
-<!-- 6️⃣ 20-MCQ QUIZ -->
-<section id="quiz" class="section">
-  <h2>📝 20 MCQs with Why</h2>
-  <div id="quizContainer"></div>
-</section>
+    <section id="uses">
+      <h2>Uses</h2>
+      <p>Used as fuels: cooking gas, petrol, candles.</p>
+    </section>
 
-<script>
-/* ---------- smooth scroll nav ---------- */
-document.querySelectorAll('nav a').forEach(link=>{
-  link.addEventListener('click',e=>{
-    e.preventDefault();
-    document.querySelector(link.hash).scrollIntoView({behavior:'smooth'});
-  });
-});
+    <section id="impact">
+      <h2>Environmental Impact</h2>
+      <p>Burning alkanes produces CO₂ → global warming. Incomplete combustion → CO poisoning.</p>
+    </section>
 
-/* ---------- 20-question quiz ---------- */
-const quizData=[
-  {q:'What is the general formula for alkanes?',a:0,opts:['C<sub>n</sub>H<sub>2n+2</sub>','C<sub>n</sub>H<sub>2n</sub>','C<sub>n</sub>H<sub>2n-2</sub>','C<sub>n</sub>H<sub>n</sub>'],why:'Alkanes have only single bonds, hence C<sub>n</sub>H<sub>2n+2</sub>.'},
-  {q:'Which alkane has 4 carbon atoms?',a:2,opts:['Propane','Pentane','Butane','Hexane'],why:'But- prefix means four.'},
-  {q:'Alkanes are called saturated because:',a:3,opts:['They have double bonds','They have triple bonds','They have aromatic rings','They have only single bonds'],why:'"Saturated" means maximum hydrogen, i.e., only single bonds.'},
-  {q:'Which is an alkane?',a:3,opts:['Ethene','Ethyne','Ethanol','Ethane'],why:'Alkanes have only single bonds.'},
-  {q:'Boiling point increases with:',a:1,opts:['Shorter chain','Longer chain','More hydrogen','Less carbon'],why:'Longer chains → stronger van der Waals forces.'},
-  {q:'Complete combustion of alkanes produces:',a:2,opts:['CO + H₂','CO + H₂O','CO₂ + H₂O','C + H₂'],why:'Excess oxygen gives CO₂ + H₂O.'},
-  {q:'Which alkane is in LPG?',a:1,opts:['Methane','Butane','Octane','Decane'],why:'Butane (and propane) are liquefied for LPG.'},
-  {q:'Which condition is needed for methane + chlorine?',a:2,opts:['Pressure','Heat','UV light','Acid'],why:'UV light initiates free-radical substitution.'},
-  {q:'Which gas indicates incomplete combustion?',a:2,opts:['CO₂','O₂','CO','H₂'],why:'CO is produced when oxygen is insufficient.'},
-  {q:'C₅H₁₂ is:',a:0,opts:['Pentane','Hexane','Butane','Heptane'],why:'C₅H₂(5)+2 = C₅H₁₂ → pentane.'},
-  {q:'Short-chain alkanes are:',a:2,opts:['Solids','Liquids','Gases','Ions'],why:'Methane, ethane, propane, butane are gases at room temp.'},
-  {q:'Why insoluble in water?',a:2,opts:['Ionic','Polar','Non-polar','Acidic'],why:'Water is polar; alkanes are non-polar.'},
-  {q:'Methane + Br₂ gives:',a:0,opts:['CH₃Br + HBr','CH₂Br₂ + H₂','CHBr₃ + H₂O','CBr₄ + H₂O'],why:'UV light gives monobromination first.'},
-  {q:'Complete combustion of butane:',a:0,opts:['C₄H₁₀ + 6.5O₂ → 4CO₂ + 5H₂O','C₄H₁₀ + 2O₂ → 4CO + 5H₂O','C₄H₁₀ + O₂ → C + H₂O','C₄H₁₀ + 3O₂ → 4C + 5H₂'],why:'Balanced with excess O₂ gives CO₂ and H₂O.'},
-  {q:'Petrol contains mainly:',a:2,opts:['Methane','Butane','Octane','Decane'],why:'Octane is the reference component in petrol.'},
-  {q:'C₆H₁₄ is:',a:1,opts:['Pentane','Hexane','Heptane','Octane'],why:'Hex- means six.'},
-  {q:'Float on water because:',a:1,opts:['Denser','Less dense','Dissolve','Conduct'],why:'They are less dense and non-polar.'},
-  {q:'Physical property:',a:2,opts:['Combustion','Substitution','Insolubility','Chlorination'],why:'Insolubility is physical; reactions are chemical.'},
-  {q:'Burn easily due to:',a:0,opts:['Weak C-H bonds','Polarity','Solubility','Double bonds'],why:'C-H bonds release energy when burned.'},
-  {q:'Molecular formula shows:',a:1,opts:['Arrangement','Total atoms','Bond angles','Ions'],why:'It shows total atoms, not arrangement.'}
-];
+    <section id="quiz">
+      <h2>Quick Quiz</h2>
+      <p>What is the general formula for alkanes?</p>
+      <button onclick="checkAnswer()">Show Answer</button>
+      <p id="answer" style="display:none;">Answer: CₙH₂ₙ₊₂</p>
+    </section>
+  </main>
 
-let currentQ=0, score=0, mistakes=[], selectedIndex=null;
-const quizContainer=document.getElementById('quizContainer');
-
-function buildQuiz(){
-  if(currentQ>=quizData.length){
-    quizContainer.innerHTML=`<p>🎉 Done! You scored ${score}/20.</p>` + (mistakes.length?'<p>Review mistakes below.</p>':'');
-    mistakes.forEach(m=>{
-      quizContainer.innerHTML+=`<div style="margin:1rem 0"><strong>${m.q}</strong><br><span style="color:red">You: ${m.opts[m.selected]}</span><br><span style="color:green">Correct: ${m.opts[m.a]}</span><br><em>${m.why}</em></div>`;
-    });
-    return;
-  }
-  selectedIndex=null;
-  const q=quizData[currentQ];
-  quizContainer.innerHTML=`
-    <p><strong>${currentQ+1}. ${q.q}</strong></p>
-    ${q.opts.map((opt,i)=>`<button class="opt" onclick="select(${i})">${opt}</button>`).join('')}
-    <p id="quizMsgQ"></p>
-    <button id="submitBtn" onclick="submit()">Submit</button>
-    <button id="nextBtn" onclick="next()" disabled>Next</button>
-  `;
-}
-
-function select(idx){
-  selectedIndex=idx;
-  document.querySelectorAll('.opt').forEach((b,i)=>b.classList.toggle('selected',i===idx));
-  document.getElementById('submitBtn').disabled=false;
-}
-
-function submit(){
-  const q=quizData[currentQ];
-  const msg=document.getElementById('quizMsgQ');
-  document.querySelectorAll('.opt').forEach(b=>b.disabled=true);
-  if(selectedIndex===q.a){
-    score++;
-    msg.innerHTML='✅ Correct!';
-  }else{
-    mistakes.push(q);
-    msg.innerHTML=`❌ Correct: <strong>${q.opts[q.a]}</strong><br><em>${q.why}</em>`;
-  }
-  document.getElementById('submitBtn').disabled=true;
-  document.getElementById('nextBtn').disabled=false;
-}
-
-function next(){
-  currentQ++;
-  buildQuiz();
-}
-
-buildQuiz();
-
-/* ---------- live sketcher ---------- */
-const cv=document.getElementById('canvas'),ctx=cv.getContext('2d');
-let atoms=[],bonds=[],dragAtom=null,dragBond=null;
-const radius={C:15,H:10};
-
-function addAtom(type){
-  atoms.push({type,x:50+Math.random()*380,y:50+Math.random()*200});
-  draw();
-}
-function eraseLast(){
-  if(atoms.length===0)return;
-  const last=atoms.length-1;
-  bonds=bonds.filter(b=>b.a!==last && b.b!==last).map(b=>({a:b.a>last?b.a-1:b.a,b:b.b>last?b.b-1:b.b,order:b.order}));
-  atoms.pop();
-  draw();
-}
-function resetCanvas(){
-  atoms=[];bonds=[];draw();
-  document.getElementById('simMsg').textContent='';
-}
-function draw(){
-  ctx.clearRect(0,0,cv.width,cv.height);
-  bonds.forEach(b=>{
-    const [x1,y1]=[atoms[b.a].x,atoms[b.a].y];
-    const [x2,y2]=[atoms[b.b].x,atoms[b.b].y];
-    const dx=x2-x1,dy=y2-y1,ang=Math.atan2(dy,dx);
-    const off=4;
-    ctx.strokeStyle='#000';
-    ctx.lineWidth=2;
-    for(let i=0;i<b.order;i++){
-      const ox=Math.sin(ang)*(i-(b.order-1)/2)*off;
-      const oy=-Math.cos(ang)*(i-(b.order-1)/2)*off;
-      ctx.beginPath();
-      ctx.moveTo(x1+ox,y1+oy);
-      ctx.lineTo(x2+ox,y2+oy);
-      ctx.stroke();
-    }
-  });
-  atoms.forEach((a,i)=>{
-    ctx.beginPath();
-    ctx.arc(a.x,a.y,radius[a.type],0,2*Math.PI);
-    ctx.fillStyle=a.type==='C'?'#444':'#0078ff';
-    ctx.fill();
-    ctx.fillStyle='#fff';
-    ctx.textAlign='center';
-    ctx.fillText(a.type,a.x,a.y+4);
-  });
-}
-function checkButane(){
-  const c=atoms.filter(a=>a.type==='C').length;
-  const h=atoms.filter(a=>a.type==='H').length;
-  let singleEdges=0;
-  bonds.forEach(b=>{singleEdges+=b.order});
-  const msg=document.getElementById('simMsg');
-  if(c===4 && h===10 && singleEdges===13){
-    msg.textContent='✅ Perfect! You built butane (C₄H₁₀).';
-    msg.style.color='green';
-  }else{
-    msg.textContent=`❌ You have ${c} C, ${h} H, ${singleEdges} single-equivalent bonds – need 4 C, 10 H, 13 bonds.`;
-    msg.style.color='crimson';
-  }
-}
-cv.onmousedown=e=>{
-  const rect=cv.getBoundingClientRect(),x=e.clientX-rect.left,y=e.clientY-rect.top;
-  const hit=atoms.findIndex(a=>(x-a.x)**2+(y-a.y)**2<radius[a.type]**2);
-  if(hit>=0){
-    if(e.shiftKey){dragBond={start:hit};}else{dragAtom={idx:hit,x,y};}
-  }
-};
-cv.onmousemove=e=>{
-  if(dragAtom){
-    const rect=cv.getBoundingClientRect();
-    atoms[dragAtom.idx].x=e.clientX-rect.left;
-    atoms[dragAtom.idx].y=e.clientY-rect.top;
-    draw();
-  }
-};
-cv.onmouseup=e=>{
-  if(dragBond){
-    const rect=cv.getBoundingClientRect(),x=e.clientX-rect.left,y=e.clientY-rect.top;
-    const end=atoms.findIndex(a=>(x-a.x)**2+(y-a.y)**2<radius[a.type]**2);
-    if(end>=0 && end!==dragBond.start){
-      const b=bonds.find(b=>(b.a===dragBond.start&b.b===end)||(b.a===end&&b.b===dragBond.start));
-      if(b){b.order=(b.order+1)%4;if(b.order===0) bonds.splice(bonds.indexOf(b),1);}
-      else bonds.push({a:dragBond.start,b:end,order:1});
-    }
-    dragBond=null;
-  }
-  dragAtom=null;
-  draw();
-};
-resetCanvas();
-</script>
+  <script src="script.js"></script>
 </body>
 </html>
